package GuiaTuristicaMultilingue.Interfaces;

public interface Traduccion {

    void introducirLugar();
    void introducirHorario();
    void inicioRespuesta();
    void finRespuesta();
}
